# netlist2image

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
assets/: ac_phasor_rc_00000000_answers.cir  ac_phasor_rc_00000001_answers.cir  ac_phasor_rc_00000002_answers.cir  ac_phasor_rc_00000003_answers.cir  ac_phasor_rc_00000004_answers.cir  ac_phasor_rc_00000005_answers.cir  ac_phasor_rc_00000006_answers.cir  ac_phasor_rc_00000007_answers.cir  ac_phasor_rc_00000008_answers.cir  ac_phasor_rc_00000009_answers.cir  ac_phasor_rc_00000010_answers.cir  ac_phasor_rc_00000011_answers.cir  ac_phasor_rc_00000012_answers.cir  ac_phasor_rc_00000013_answers.cir  ac_phasor_rc_00000014_answers.cir  ac_phasor_rc_00000015_answers.cir  ac_phasor_rc_00000016_answers.cir  ac_phasor_rc_00000017_answers.cir  ac_phasor_rc_00000018_answers.cir  ac_phasor_rc_00000019_answers.cir  ac_phasor_rc_00000020_answers.cir  ac_phasor_rc_00000021_answers.cir  ac_phasor_rc_00000022_answers.cir  ac_phasor_rc_00000023_answers.cir  ac_phasor_rc_00000024_answers.cir  ac_phasor_rc_00000025_answers.cir  ac_phasor_rc_00000026_answers.cir  ac_phasor_rc_00000027_answers.cir  ac_phasor_rc_00000028_answers.cir  ac_phasor_rc_00000029_answers.cir  ac_phasor_rc_00000030_answers.cir  ac_phasor_rc_00000031_answers.cir  ac_phasor_rc_00000032_answers.cir  ac_phasor_rc_00000033_answers.cir  ac_phasor_rc_00000034_answers.cir  ac_phasor_rc_00000035_answers.cir  ac_phasor_rc_00000036_answers.cir  ac_phasor_rc_00000037_answers.cir  ac_phasor_rc_00000038_answers.cir  ac_phasor_rc_00000039_answers.cir  (+12641 more)
tests/: test_parser.py
(+20 files in other folders)
